--- a/sticky-menu.css
+++ b/sticky-menu.css
@@ -6,3 +6,10 @@
   width: 100%;
   z-index: 999;
 }
+
+@media only screen and (max-width: 800px) {
+  .sticky-nav .site-navigation {
+      position: relative;
+      top: auto;
+    } 
+}
